# noisebell

./: .gitignore  Cargo.toml  README.md  config.example.env  config.toml  deploy.sh  endpoints.json  noisebell.service
noisebell-pi/: .gitignore  deploy.sh  env.example
noisebell-pi/.cargo/: config.toml
noisebell-pi/src/: endpoint_notifier.rs  gpio_monitor.rs  logging.rs  main.rs  monitor.rs
noisebell-pi/static/: monitor.html
noisebell-status/: package.json  pnpm-lock.yaml
noisebell-status/src/components/: Status.tsx
src/: config.rs  discord.rs  endpoint_notifier.rs  gpio.rs  logging.rs  main.rs  monitor.rs  storage.rs  web_monitor.rs  webhook.rs  webhook_sender.rs
src/api/: health.rs  mod.rs  status.rs  webhooks.rs
