[package]
name = "noisebell"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rppal = "0.22"
serde = { version = "1.0", features = ["derive"] }
tracing-appender = "0.2"
serenity = { version = "0.12", features = ["standard_framework"] }
