[package]
name = "noisebell"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rppal = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
tracing-appender = "0.2.3"
serenity = { version = "0.12.4", features = ["standard_framework"] }
