[package]
name = "noisebell"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rppal = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
tracing-appender = "0.2.3"
axum = { version = "0.8.4", features = ["ws"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
serde_json = "1.0.140"
regex = "1.11.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
futures-util = "0.3.31"
url = "2.5.4"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.9.5"
dotenvy = "0.15.7"
